[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "WMExternalServices"
version = "0.0.1"

description = "Service classes for Weather Manager"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/freebirduk/WMServices"
"Bug Tracker" = "https://github.com/freebirduk/WMServices/issues"